<resources>
    <string name="app_name">FamilyCatQuiz</string>
    <string name="name">Name</string>
    <string name="_1_cat">1 cat</string>
    <string name="_2_cats">2 cats</string>
    <string name="_3_cats">3 cats</string>
    <string name="_berlin_cats">Question 1: How many cats live in Berlin?</string>
    <string name="_friends">Question 2: Which cats are friends? Check all that apply.</string>
    <string name="_old_young">The oldest and the youngest one</string>
    <string name="_berlin_boys">The T-boys</string>
    <string name="_black_and_grey">The black and the grey one</string>
    <string name="submit_answers">Submit answers</string>
    <string name="_score_message">What will your score be?</string>
    <string name="_welcome_message">How well do you know the cats in Nora\'s family? Play to find out!</string>
    <string name="_hint_name">Enter your name here</string>
    <string name="_hint_chili">Type the name of the chili loving cat</string>
    <string name="_question_chili">Question 5: Who loves chili?</string>
    <string name="_hint_cake">Type the name of the cake loving cat</string>
    <string name="_question_cake">Question 4: Who loves cake?</string>
    <string name="_hint_box">Type the name of the box loving cat</string>
    <string name="_question_box">Question 3: Who loves boxes?</string>
</resources>
